# MPiAnalysis

./: .gitignore
.junie/: guidelines.md
manual/: remote_control_manual.md  summary.md
mentorpi_Docker_analysis/Analysis_ubt_in_MTP/: MentorPiCore_Ext_and_Docker_Relationship.md  RRCLite_demo_summary.md  rviz2_summary.md  third_party_ros2_summary.md
mentorpi_analysis/Analysis_ubt_in_MTP/: camera_test.py  lidar_test.py  main_summary.md  ros2_ws_summary.md  shared_summary.md  software_summary.md
remote_control_pkg/: package.xml  setup.cfg  setup.py
remote_control_pkg/launch/: pc_control.launch.py  robot_control.launch.py
remote_control_pkg/remote_control_pkg/: pc_control_node.py  robot_control_node.py
remote_control_pkgVer2/: changelog.md  installation_guide.md  package.xml  setup.cfg  setup.py
remote_control_pkgVer2/launch/: pc_control.launch.py  robot_control.launch.py
remote_control_pkgVer2/remote_control_pkgVer2/: pc_control_node.py  robot_control_node.py
